force-app/main/default/objects/onemergefree__AppSettings__c/onemergefree__AppSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>OneMerge App Settings</description>
    <label>App Settings</label>
</CustomObject>