force-app/main/default/objects/onemergefree__AppSettings__c/fields/onemergefree__DeleteMergeLogEntriesAfter__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__DeleteMergeLogEntriesAfter__c</fullName>
    <defaultValue>30</defaultValue>
    <description>The number of days after the CreatedDate Merge Log Entries are deleted by the OneMerge Data Sweeper.</description>
    <inlineHelpText>The number of days after the CreatedDate Merge Log Entries are deleted by the OneMerge Data Sweeper.</inlineHelpText>
    <label>Delete Merge Log Entries After (Days)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>