force-app/main/default/objects/onemergefree__AppSettings__c/fields/onemergefree__FlowsActive__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__FlowsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If FALSE, all packaged record-triggered flows are deactivated. The default value is TRUE.</description>
    <inlineHelpText>If FALSE, all packaged record-triggered flows are deactivated. The default value is TRUE.</inlineHelpText>
    <label>Flows Active?</label>
    <type>Checkbox</type>
</CustomField>