force-app/main/default/objects/onemergefree__AppSettings__c/fields/onemergefree__IsDeleteMergeLogEntries__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__IsDeleteMergeLogEntries__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, Merge Log Entries are deleted by the OneMerge Data Sweeper.</description>
    <inlineHelpText>If TRUE, Merge Log Entries are deleted by the OneMerge Data Sweeper.</inlineHelpText>
    <label>Is Delete Merge Log Entries?</label>
    <type>Checkbox</type>
</CustomField>