force-app/main/default/objects/onemergefree__AppSettings__c/fields/onemergefree__MasterRecordUpdateSeconds__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__MasterRecordUpdateSeconds__c</fullName>
    <defaultValue>30</defaultValue>
    <description>The number of seconds after a merge that new Duplicate Record Sets are considered Master Record Updates and skipped.</description>
    <inlineHelpText>The number of seconds after a merge that new Duplicate Record Sets are considered Master Record Updates and skipped.</inlineHelpText>
    <label>Master Record Update Seconds</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>