force-app/main/default/objects/onemergefree__AppSettings__c/fields/onemergefree__MergeLogLevel__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__MergeLogLevel__c</fullName>
    <description>Supported values; None, Normal, Debug. If no supported value present then the default is Normal.</description>
    <inlineHelpText>Supported values; None, Normal, Debug. If no supported value present then the default is Normal.</inlineHelpText>
    <label>Merge Log Level</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>