force-app/main/default/objects/onemergefree__AppSettings__c/fields/onemergefree__RecordSetsPerMergeJobBatch__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__RecordSetsPerMergeJobBatch__c</fullName>
    <defaultValue>10</defaultValue>
    <description>The number of Duplicate Record Sets merged by a Merge Job Batch in the 1-100 range. A high number reduces the consumption of the asynchronous transaction platform limit. A lower number increases concurrency and allows more complex Merge Rules. The default value is 10.</description>
    <inlineHelpText>The number of Duplicate Record Sets merged by a Merge Job Batch in the 1-100 range. A high number reduces the consumption of the asynchronous transaction platform limit. A lower number increases concurrency and allows more complex Merge Rules. The default value is 10.</inlineHelpText>
    <label>Duplicate Record Sets Per Job Batch</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>