force-app/main/default/objects/onemergefree__AppSettings__c/fields/onemergefree__RecordsPerMatchingJobBatch__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__RecordsPerMatchingJobBatch__c</fullName>
    <defaultValue>25</defaultValue>
    <description>The number of Records matched by a Matching Job Batch in the 1-100 range. A high number reduces the consumption of the asynchronous transaction platform limit. The default value is 25.</description>
    <inlineHelpText>The number of Records matched by a Matching Job Batch in the 1-100 range. A high number reduces the consumption of the asynchronous transaction platform limit. The default value is 25.</inlineHelpText>
    <label>Records Per Matching Job Batch</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>