force-app/main/default/objects/onemergefree__AppSettings__c/fields/onemergefree__TransactionLimitsAllowance__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__TransactionLimitsAllowance__c</fullName>
    <defaultValue>95</defaultValue>
    <description>The percentage of Transaction Governor Limits used for processing. Where limits use exceeds this allowance transactions will commit completed work only.</description>
    <inlineHelpText>The percentage of Transaction Governor Limits used for processing. Where limits use exceeds this allowance transactions will commit completed work only.</inlineHelpText>
    <label>Transaction Limits Allowance</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>