force-app/main/default/objects/onemergefree__AppSettings__c/fields/onemergefree__TriggersActive__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__TriggersActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If FALSE, all packaged triggers are deactivated.</description>
    <inlineHelpText>If FALSE, all packaged triggers are deactivated.</inlineHelpText>
    <label>Triggers Active?</label>
    <type>Checkbox</type>
</CustomField>